--- a/todo_item_dynamically.html
+++ b/todo_item_dynamically.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="todos-heading">Todos</h1>
+                    <h1 class="todos-heading">Todos-updated</h1>
                     <h1 class="create-task-heading">
                         Create <span class="create-task-heading-subpart">Task</span>
                     </h1>
